NetworkManager might actually be the better solution here

--- a/definitions/centos7_mw/ks.cfg
+++ b/definitions/centos7_mw/ks.cfg
@@ -49,8 +49,11 @@ zlib-devel
 %end
 
 %post
+# this is no longer necessary with NetworkManager and the device might be called differently later
+rm -f /etc/sysconfig/network-scripts/ifcfg-enp0s3
+
 # remove unnecessary stuff (negating them in the packages section doesn't do the job)
-yum -y remove avahi firewalld "NetworkManager*" "iwl*firmware*"
+yum -y remove "iwl*firmware*"
 yum -y update
 yum clean all
 
