re-add firewalld removal

--- a/definitions/centos7_mw/ks.cfg
+++ b/definitions/centos7_mw/ks.cfg
@@ -53,7 +53,7 @@ zlib-devel
 rm -f /etc/sysconfig/network-scripts/ifcfg-enp0s3
 
 # remove unnecessary stuff (negating them in the packages section doesn't do the job)
-yum -y remove "iwl*firmware*"
+yum -y remove "iwl*firmware*" firewalld
 yum -y update
 yum clean all
 
