Lots of improvements and fixes

--- a/definitions/centos7_mw_puppet-site/ks.cfg
+++ b/definitions/centos7_mw_puppet-site/ks.cfg
@@ -41,7 +41,9 @@ openssl-devel
 perl
 puppetlabs-release
 puppet
+puppet-server
 readline-devel
+rsync
 sqlite-devel
 sudo
 wget
@@ -49,14 +51,6 @@ zlib-devel
 %end
 
 %post
-# this is no longer necessary with NetworkManager and the device might be called differently later
-rm -f /etc/sysconfig/network-scripts/ifcfg-enp0s3
-
-# remove unnecessary stuff (negating them in the packages section doesn't do the job)
-yum -y remove "iwl*firmware*" firewalld
-yum -y update
-yum clean all
-
 # Allow veewee to execute its scripts.
 /usr/sbin/groupadd veewee
 /usr/sbin/useradd veewee -g veewee -G wheel
